re PR bootstrap/41345 (bootstrap comparison failure with --disable-checking)

PR bootstrap/41345
	* cfgcleanup.c (trivially_empty_bb_p): New function.
	(try_optimize_bb): Use it instead of checking BB_HEAD == BB_END.

	* gcc.dg/pr41345.c: New test.

From-SVN: r153569